--- a/1Base/2.变量.html
+++ b/1Base/2.变量.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+  <script>
+    let name = prompt("请输入你的名字:")
+    let age = prompt("请输入你的年龄:")
+    let sex = prompt("请输入你的性别：")
+    document.write(name, age, sex)
+
+  </script>
 </body>
 </html>
